--- a/index.html
+++ b/index.html
@@ -6,31 +6,35 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
  <!-- Add tab name -->
   <title>Portfolio</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+  
+<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  <!-- Page name & navigation -->
-  <header>
-     <h1>Paul Jung</h1>
-
-<!-- Need to add links to nav list -->
-       <nav> 
-       <ul>
-         <li>About</li>
-          <li>Portfolio</li>
-          <li>Contact</li>
-       </ul>
+  <div class="header">
+    <div class ="name">
+      <!-- lower name to fit -->
+      <div class="lower"><h1>Paul Jung</h1></div>
+      <nav>
+        <ul>
+          <li><a href="index.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+        </ul>
       </nav>
-   </header>
+    </div>
+  </div>
 
-   <!-- About me and Bio/picture -->
-   <h2>About Me </h2>
-   <!-- Added picture/ Need to resize -->
-      <img src="assets/images/12096498_10201351719990825_924240634026425844_n.jpg">
+  <div class="area">
+    <div class="maincontent">
+      <h2>About Me</h2>
+      <p><img src="assets/images/12096498_10201351719990825_924240634026425844_n.jpg" class="biopic">My name is Paul Jung. I was born in Seoul, Korea and moved to USA when I was three years old. I have been living in Orange County my whole life. I currently work at the Anaheim Marriott Hotel as a bellman. My goal is to switch careers to computer programming. What drew me to programming was whenever I am on an app or website I will always think of ways to make it better. What I like about programming is that I can create something that can impact peoples lives for the better. I will apply my never giving up attitude and thinking outside of the box mentality to be a good programmer one day. Thank you for taking the time to visit my webpage!</p>
+    </div>
+  </div>
+<!-- add sticky footer -->
+  <div class="footer">
+    <footer>Copyright &#169</footer>
+  </div>
 
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis beatae culpa ipsa. Qui quo voluptas amet corporis provident cumque incidunt aliquid reprehenderit. Nostrum in ducimus libero tempore quibusdam amet ratione?</p>
 
-      <!-- Copyright added here for footer/make sticky folder!-->
-  <footer>Copyright &copy;</footer>
 </body>
 </html>
