finished hw need to touch up

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <nav>
         <ul>
           <li><a href="index.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -27,7 +27,11 @@
   <div class="area">
     <div class="maincontent">
       <h2>About Me</h2>
-      <p><img src="assets/images/12096498_10201351719990825_924240634026425844_n.jpg" class="biopic">My name is Paul Jung. I was born in Seoul, Korea and moved to USA when I was three years old. I have been living in Orange County my whole life. I currently work at the Anaheim Marriott Hotel as a bellman. My goal is to switch careers to computer programming. What drew me to programming was whenever I am on an app or website I will always think of ways to make it better. What I like about programming is that I can create something that can impact peoples lives for the better. I will apply my never giving up attitude and thinking outside of the box mentality to be a good programmer one day. Thank you for taking the time to visit my webpage!</p>
+
+      <img src="assets/images/12096498_10201351719990825_924240634026425844_n.jpg" class="biopic">
+      
+      <p>My name is Paul Jung. I was born in Seoul, Korea and moved to USA when I was three years old. I have been living in Orange County my whole life. I currently work at the Anaheim Marriott Hotel as a bellman. My goal is to switch careers to computer programming. What drew me to programming was whenever I am on an app or website I will always think of ways to make it better. What I like about programming is that I can create something that can impact peoples lives for the better. I will apply my never giving up attitude and thinking outside of the box mentality to be a good programmer one day. Thank you for taking the time to visit my webpage!</p>
+      
     </div>
   </div>
 <!-- add sticky footer -->
